feat(web): add Next.js landing + dashboard scaffolding; feat(api): interviews routes; chore(db): Supabase schema for multi-tenant interviews with RLS; fix(ext): summary modal, transcript persistence, research prompt compose; fallback(OpenAI): retry without response_format on 400

--- a/manifest.json
+++ b/manifest.json
@@ -8,14 +8,17 @@
     "tabs",
     "activeTab",
     "scripting",
-    "webNavigation"
+    "webNavigation",
+    "offscreen"
   ],
   "host_permissions": [
     "https://meet.google.com/*",
     "https://*.zoom.us/*",
     "https://teams.microsoft.com/*",
     "https://*.webex.com/*",
-    "https://ftmcmonyfetjeimoxrbt.supabase.co/*"
+    "https://*.linkedin.com/*",
+    "https://ftmcmonyfetjeimoxrbt.supabase.co/*",
+    "https://api.openai.com/*"
   ],
   "background": {
     "service_worker": "background/service-worker.js",
@@ -41,12 +44,13 @@
       "resources": [
         "sidebar/sidebar.html",
         "content/styles.css",
-        "icons/*"
+        "icons/*",
+        "background/offscreen.html"
       ],
       "matches": ["<all_urls>"]
     }
   ],
   "content_security_policy": {
-    "extension_pages": "script-src 'self'; object-src 'self'"
+    "extension_pages": "script-src 'self'; object-src 'self'; connect-src 'self' https://api.openai.com https://ftmcmonyfetjeimoxrbt.supabase.co"
   }
 }
